--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,7 @@ runs:
   steps:
     - name: Check if SonarCloud project exists
       id: sonar_project
+      shell: sh
       env:
         GITHUB_ORG: ${{ github.repository_owner }}
         REPO_NAME: ${{ github.event.repository.name }}
@@ -53,6 +54,7 @@ runs:
 
     - name: Create SonarCloud project
       if: ${{ steps.sonar_project.outputs.exists == 'false' }}
+      shell: sh
       env:
         GITHUB_ORG: ${{ github.repository_owner }}
         REPO_NAME: ${{ github.event.repository.name }}
@@ -76,6 +78,7 @@ runs:
           "https://sonarcloud.io/api/alm_integration/provision_projects"
 
     - name: Configure autoscan
+      shell: sh
       env:
         GITHUB_ORG: ${{ github.repository_owner }}
         REPO_NAME: ${{ github.event.repository.name }}
