--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,10 @@ name: 'Manages SonarCloud projects'
 description: 'Manages SonarCloud projects'
 
 inputs:
+  sonar_org:
+    description: 'SonarCloud organization name'
+    required: false
+    default: ${{ github.repository_owner }}
   sonar_token:
     description: 'SonarCloud access token'
     required: true
@@ -17,7 +21,7 @@ runs:
       env:
         GITHUB_ORG: ${{ github.repository_owner }}
         REPO_NAME: ${{ github.event.repository.name }}
-        SONAR_ORG: mov-ai
+        SONAR_ORG: ${{ inputs.sonar_org }}
         SONAR_TOKEN: ${{ inputs.sonar_token }}
       run: |
         json=$( \
@@ -59,7 +63,7 @@ runs:
         GITHUB_ORG: ${{ github.repository_owner }}
         REPO_NAME: ${{ github.event.repository.name }}
         GITHUB_TOKEN: ${{ github.token }}
-        SONAR_ORG: mov-ai
+        SONAR_ORG: ${{ inputs.sonar_org }}
         SONAR_TOKEN: ${{ inputs.sonar_token }}
       run: |
         # find repository ID
@@ -83,7 +87,7 @@ runs:
         GITHUB_ORG: ${{ github.repository_owner }}
         REPO_NAME: ${{ github.event.repository.name }}
         GITHUB_TOKEN: ${{ github.token }}
-        SONAR_ORG: mov-ai
+        SONAR_ORG: ${{ inputs.sonar_org }}
         SONAR_TOKEN: ${{ inputs.sonar_token }}
       run: |
         # configure autoscan (it is enabled at project creation)
