--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,12 @@ runs:
     - name: Install action dependencies
       shell: sh
       run: |
-        apt install -y curl jq
+        if [[ -z "$(command -v curl)" ]]; then
+          apt install -y curl
+        fi
+        if [[ -z "$(command -v jq)" ]]; then
+          apt install -y jq
+        fi
 
     - name: Check if SonarCloud project exists
       id: sonar_project
